--- a/IOS/WiController/en.lproj/MainStoryboard.storyboard
+++ b/IOS/WiController/en.lproj/MainStoryboard.storyboard
@@ -14,36 +14,36 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="aas-aX-0PH">
-                                <rect key="frame" x="96" y="20" width="133" height="31"/>
+                                <rect key="frame" x="96" y="20" width="204" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="alphabet" returnKeyType="done"/>
                             </textField>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Server IP:" lineBreakMode="tailTruncation" minimumFontSize="10" id="Evg-Ua-hWd">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Server:" lineBreakMode="tailTruncation" minimumFontSize="10" id="Evg-Ua-hWd">
                                 <rect key="frame" x="20" y="25" width="68" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Password:" lineBreakMode="tailTruncation" minimumFontSize="10" id="tLx-Ox-hEq">
                                 <rect key="frame" x="20" y="64" width="68" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="l66-0F-gUT">
-                                <rect key="frame" x="96" y="59" width="105" height="31"/>
+                                <rect key="frame" x="96" y="59" width="102" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                <textInputTraits key="textInputTraits" keyboardType="alphabet" returnKeyType="done" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" id="dbw-eZ-pqG">
-                                <rect key="frame" x="237" y="19" width="70" height="33"/>
+                                <rect key="frame" x="110" y="112" width="100" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
-                                <state key="normal" title="Set">
+                                <state key="normal" title="Connect">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -55,7 +55,7 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Z2b-4Z-6JS">
-                                <rect key="frame" x="20" y="135" width="280" height="248"/>
+                                <rect key="frame" x="20" y="188" width="280" height="195"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -130,18 +130,18 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="8" y="158"/>
+            <point key="canvasLocation" x="7" y="158"/>
         </scene>
         <scene sceneID="dOe-Ij-nBB">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9bN-h7-K71" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="znP-Ap-1I9" customClass="MouseViewController" sceneMemberID="viewController">
-                    <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="axy-eC-UiN" customClass="MouseUIView">
+                    <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="axy-eC-UiN">
                         <rect key="frame" x="0.0" y="20" width="480" height="300"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Uoh-Hk-7Bu">
-                                <rect key="frame" x="384.5" y="18.5" width="80" height="40"/>
+                                <rect key="frame" x="364" y="20" width="100" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Return">
@@ -156,7 +156,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="jFa-qv-lmd">
-                                <rect key="frame" x="380" y="144" width="80" height="40"/>
+                                <rect key="frame" x="364" y="114" width="100" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="M">
@@ -173,7 +173,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="XAl-eQ-t8J">
-                                <rect key="frame" x="380" y="192" width="80" height="40"/>
+                                <rect key="frame" x="364" y="172" width="100" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="L">
@@ -190,7 +190,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="lKd-wj-xjr">
-                                <rect key="frame" x="380" y="240" width="80" height="40"/>
+                                <rect key="frame" x="364" y="230" width="100" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="R">
@@ -206,11 +206,19 @@
                                     <action selector="rightButtonUpOutside:" destination="znP-Ap-1I9" eventType="touchUpOutside" id="fvo-u1-IYs"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" id="oli-Km-lLV" customClass="MouseUIView">
+                                <rect key="frame" x="0.0" y="0.0" width="356" height="300"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <connections>
+                        <outlet property="mouseUIView" destination="oli-Km-lLV" id="WyW-7U-RTW"/>
+                    </connections>
                 </viewController>
             </objects>
             <point key="canvasLocation" x="614" y="-219"/>
@@ -448,7 +456,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4xf-wX-B6T">
-                                <rect key="frame" x="20" y="20" width="76" height="35"/>
+                                <rect key="frame" x="20" y="20" width="80" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                                 <state key="normal" title="Return">
@@ -497,6 +505,7 @@
                 <relationship kind="action" name="rightButtonDown:"/>
                 <relationship kind="action" name="rightButtonUpInside:"/>
                 <relationship kind="action" name="rightButtonUpOutside:"/>
+                <relationship kind="outlet" name="mouseUIView" candidateClass="MouseUIView"/>
             </relationships>
         </class>
         <class className="ShortcutsViewController" superclassName="UIViewController">
